# bpftrace

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  0001-XXX-FIX.patch  0001-XXX-Log-ModulePath-close.patch  0001-XXX-enter_ns-debug.patch  AGENTS.md  CHANGELOG.md  CMakeLists-LLVM.txt  CMakeLists.txt  CONTRIBUTING-TOOLS.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INSTALL.md  LICENSE  README.md  Vagrantfile  a.out  appveyor.yml  bpftrace-completion.sh  bpftrace_rsa.enc  build-common.sh  build-debug.sh  build-docker-image.sh  build-libs.sh  build-release.sh  build-static.sh  build.sh  ci_fix_message.md  codeql-analysis.yml  flake.nix  out  (+4 more)
man/adoc/: CMakeLists.txt  bpftrace.adoc
man/man8/: CMakeLists.txt  bashreadline.8  bashreadline.bt.8  biolatency.8  biolatency.bt.8  biosnoop.8  biosnoop.bt.8  biostacks.8  biostacks.bt.8  bitesize.8  bitesize.bt.8  bpftrace.8  capable.8  capable.bt.8  cpuwalk.8  cpuwalk.bt.8  dcsnoop.8  dcsnoop.bt.8  execsnoop.8  execsnoop.bt.8  filelife.bt.8  gethostlatency.8  gethostlatency.bt.8  killsnoop.8  killsnoop.bt.8  loads.8  loads.bt.8  mdflush.8  mdflush.bt.8  naptime.bt.8  numasched.bt.8  oomkill.8  oomkill.bt.8  opensnoop.8  opensnoop.bt.8  pidpersec.8  pidpersec.bt.8  runqlat.8  runqlat.bt.8  runqlen.8  (+33 more)
resources/: CMakeLists.txt  asm_goto_workaround.h  clang_workarounds.h
src/: CMakeLists.txt  act_helpers.h  ast.cpp  ast.h  async_action.cpp  async_action.h  attached_probe.cpp  attached_probe.h  benchmark.cpp  benchmark.h  bfd-disasm.cpp  bfd-disasm.h  bpf_assembler.h  bpfbytecode.cpp  bpfbytecode.h  bpffeature.cpp  bpffeature.h  bpfmap.cpp  bpfmap.h  bpforc.cpp  bpforc.h  bpforcv1.cpp  bpforcv2.cpp  bpfprogram.cpp  bpfprogram.h  bpftrace.cpp  bpftrace.h  btf.cpp  btf.h  build_info.cpp  build_info.h  capabilities.cpp  capabilities.h  child.cpp  child.h  clang_parser.cpp  clang_parser.h  codegen.cpp  codegen.h  codegen_bcc.cpp  (+120 more)
src/aot/: CMakeLists.txt  aot.cpp  aot.h  aot_main.cpp
src/arch/: CMakeLists.txt  aarch64.cpp  arch.cpp  arch.h  arm.cpp  loongarch64.cpp  mips64.cpp  ppc64.cpp  riscv64.cpp  s390.cpp  x86_64.cpp
src/ast/: .codegen_llvm.cpp.swp  CMakeLists.txt  allocation_helper.h  ast.cpp  ast.h  async_event_types.cpp  async_event_types.h  async_ids.h  attachpoint_parser.cpp  attachpoint_parser.h  callback_visitor.cpp  callback_visitor.h  clone.h  codegen_helper.cpp  codegen_helper.h  codegen_llvm.cpp  codegen_llvm.h  context.cpp  context.h  diagnostic.cpp  diagnostic.h  dibuilderbpf.cpp  dibuilderbpf.h  elf_parser.cpp  elf_parser.h  fake_map.cpp  fake_map.h  field_analyser.cpp  field_analyser.h  helpers.cpp  helpers.h  int_parser.cpp  int_parser.h  integer_types.cpp  integer_types.h  irbuilderbpf.cpp  irbuilderbpf.h  location.cpp  location.h  node_counter.h  (+18 more)
src/async/: CMakeLists.txt  functions.cpp  functions.h  memory.cpp  memory.h  relocations.cpp  relocations.h
src/btf/: CMakeLists.txt  btf.cpp  btf.h  compat.cpp  compat.h  helpers.cpp  helpers.h  irbuilder.cpp  irbuilder.h
src/container/: cstring_view.h  ref.h
src/cxxdemangler/: CMakeLists.txt  cxxdemangler.h  cxxdemangler_llvm.cpp  cxxdemangler_stdlib.cpp
src/debugfs/: CMakeLists.txt  debugfs.cpp  debugfs.h
src/dwarf/: dwunwind.cpp  dwunwind.h  dwunwind_loader.cpp  dwunwind_loader.h  dwunwind_table.cpp  dwunwind_table.h
src/libbpf/: bpf.h
src/output/: CMakeLists.txt  buffer_mode.h  capture.h  discard.h  json.cpp  json.h  output.cpp  output.h  text.cpp  text.h
src/passes/: clang_parser.cpp
src/patches/: lldb_defer_python_init.patch
src/providers/: CMakeLists.txt  benchmark.cpp  benchmark.h  fentry.cpp  fentry.h  interval.cpp  interval.h  iter.cpp  iter.h  kprobe.cpp  kprobe.h  perf.cpp  perf.h  profile.cpp  profile.h  provider.cpp  provider.h  rawtracepoint.cpp  rawtracepoint.h  special.cpp  special.h  tracepoint.cpp  tracepoint.h  uprobe.cpp  uprobe.h  usdt.cpp  usdt.h  watchpoint.cpp  watchpoint.h
src/resources/: CMakeLists.txt
src/rustdemangler/: CMakeLists.txt  rustdemangler.h  rustdemangler_llvm.cpp  rustdemangler_stdlib.cpp
src/stdlib/: CMakeLists.txt  arch.bt  base.bpf.c  base.bt  base.c  base_bc.h  base_bt.h  base_btf.h  cgroups.bt  generate.sh  internal.bt  kfunc.bt  map-util.bpf.c  map.bpf.c  map_util.bpf.c  meta.bt  network.bpf.c  network.bt  path.bt  process.bt  socket.bpf.c  socket.bt  stdlib.cpp  stdlib.cpp.in  stdlib.h  strings.bpf.c  strings.bt  syscall.h  system.bpf.c  task.bpf.c  usdt.bpf.c  util.bpf.c  vma.bpf.c
src/symbols/: CMakeLists.txt  elf_parser.cpp  elf_parser.h  kernel.cpp  kernel.h  user.cpp  user.h
src/tracefs/: CMakeLists.txt  tracefs.cpp  tracefs.h
tests/: CMakeLists.txt  README.md  ap_expansion.cpp  ap_probe_expansion.cpp  arch.cpp  ast.cpp  ast_matchers.cpp  ast_matchers.h  async_action.cpp  async_functions.cpp  attached_probe.cpp  attachpoint_parser.cpp  attachpoint_passes.cpp  benchmarks.cpp  bitfield.cpp  bpfbytecode.cpp  bpftrace.cpp  btf.cpp  btf_common.h  btf_data.h  builtins.cpp  cache.cpp  child.cpp  childhelper.h  clang_parser.cpp  cli.cpp  cli_opts.cpp  codegen-tests.sh  codegen-validator.sh  codegen.cpp  collect_nodes.cpp  config.cpp  config_analyser.cpp  control_flow_analyser.cpp  cstring_view.cpp  deprecated.cpp  diagnostic.cpp  doc.cpp  dwarf_common.h  field_analyser.cpp  (+53 more)
tools/: CMakeLists.txt  README.md  bashreadline.bt  bashreadline_example.txt  biolatency-kp.bt  biolatency.bt  biolatency_example.txt  biosnoop.bt  biosnoop_example.txt  biostacks.bt  biostacks_example.txt  bitesize.bt  bitesize_example.txt  capable.bt  capable_example.txt  cpuwalk.bt  cpuwalk_example.txt  dcsnoop.bt  dcsnoop_example.txt  execsnoop.bt  execsnoop_example.txt  filelife.bt  filelife_example.txt  genmakereq.bt  genmakereq_example.txt  gethostlatency.bt  gethostlatency_example.txt  hrtimersnoop.bt  hrtimersnoop_example.txt  hwdrop.bt  hwdrop_example.bt  killsnoop.bt  killsnoop_example.txt  kvmpagefault.bt  loads.bt  loads_example.txt  mdflush.bt  mdflush_example.txt  naptime.bt  naptime_example.txt  (+60 more)
(+1236 files in other folders)
